GNOME Bugzilla – Bug 603540
g_time_val_from_iso8601 uses uninitialised variable
Last modified: 2009-12-09 20:39:33 UTC
Created attachment 148867 [details] [review] Patch This function does not initialise the struct tm tm, giving it improper values of tm_isdst making the result an hour out. Here is a patch. It appears to have some whitespace changes in too; sorry.
Comment on attachment 148867 [details] [review] Patch Patch looks good to me.
Comment on attachment 148867 [details] [review] Patch commit 2321e5aed07154761223bb124770beba56700e41
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you Matthew for your bug report.
Is it not possible to distribute it in a minor/bugfix release?
I'll pull it into a bugfix release, sure